--- a/rootdir/etc/init.spectrum.rc
+++ b/rootdir/etc/init.spectrum.rc
@@ -5,8 +5,10 @@
 # Initialization
 on property:sys.boot_completed=1
    # Set default profile on first boot
+   # Executed under three different contexts to make sure it fires properly
    exec u:r:init:s0 root root -- /init.spectrum.sh
    exec u:r:su:s0 root root -- /init.spectrum.sh
+   exec u:r:supersu:s0 root root -- /init.spectrum.sh
    # Enable Spectrum support
    setprop spectrum.support 1
    # Add kernel name
