Do not start livedisplay in the first boot.
Based on cedric commit. It decreases device's performance highly.Let's just make it stop in the first boot.
The users can turn it on from settings if they want.

Signed-off-by: Rajat Gupta <rjtgupta84@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1110,6 +1110,14 @@ service audiod /system/bin/audiod
     user system
     group system
 
+service stopld /system/bin/sh /init.livedisplay.sh
+    class main
+    user root
+    oneshot
+
+on property:sys.boot_completed=1
+    start stopld
+
 on charger
     wait /dev/block/bootdevice/by-name/system
     mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
