--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -157,7 +157,8 @@ on enable-low-power
     write /sys/module/process_reclaim/parameters/swap_opt_eff 30
 
     write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
-    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 53059
+    write /sys/module/lowmemorykiller/parameters/minfree "18432,23040,27648,32256,40960,51200"
+    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 56832
 
     # Set idle GPU to 240 Mhz
     write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 4
