--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -76,8 +76,12 @@ on init
 
     # ZRAM
     write /sys/block/zram0/comp_algorithm "lz4"
+    write /proc/sys/vm/dirty_background_ratio 10
+    write /proc/sys/vm/dirty_ratio 40
+    write /proc/sys/vm/overcommit_ratio 0
     write /proc/sys/vm/page-cluster 0
-    write /proc/sys/vm/swappiness 100
+    write /proc/sys/vm/swappiness 60
+    write /proc/sys/vm/vfs_cache_pressure 50
 
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
