--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -132,8 +132,8 @@ on enable-low-power
     write /proc/sys/kernel/sched_freq_dec_notify 50000
 
     # Input boost config
-    write /sys/module/cpu_boost/parameters/input_boost_freq 1094400
-    write /sys/module/cpu_boost/parameters/input_boost_ms 40
+    write /sys/module/cpu_boost/parameters/input_boost_freq "0:1094400 4:998400"
+    write /sys/module/cpu_boost/parameters/input_boost_ms 500
 
     # Enable core control
     write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 2
