--- a/rootdir/etc/init.spectrum.rc
+++ b/rootdir/etc/init.spectrum.rc
@@ -15,12 +15,12 @@ on property:sys.boot_completed=1
 # Balance (default profile)
 on property:persist.spectrum.profile=0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 91
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/above_hispeed_delay 0
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_rate 60000
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 960000
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_slack 480000
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads 80 460800:70 600000:99
+    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 94
+    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/above_hispeed_delay "0 1440000:20000"
+    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_rate 50000
+    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 1094400
+    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_slack 200000
+    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads 88
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 0
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/boost 0
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/align_windows 1
@@ -29,14 +29,13 @@ on property:persist.spectrum.profile=0
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/max_freq_hysteresis 0
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/boostpulse_duration 0
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 633600
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/go_hispeed_load 91
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/above_hispeed_delay 0
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate 30000
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/hispeed_freq 960000
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_slack 480000
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads 70 960000:90 1440000:99
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/min_sample_time 0
+    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/go_hispeed_load 92
+    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/above_hispeed_delay "0 1094400:20000"
+    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate 40000
+    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/hispeed_freq 998400
+    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_slack 160000
+    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads 85
+    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/min_sample_time 20000
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boost 0
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/align_windows 1
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_migration_notif 1
@@ -44,9 +43,9 @@ on property:persist.spectrum.profile=0
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/max_freq_hysteresis 0
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boostpulse_duration 0
     write /sys/module/cpu_boost/parameters/input_boost_enabled 1
-    write /sys/module/cpu_boost/parameters/input_boost_freq 0:600000 1:600000 2:600000 3:600000 4:0 5:0
+    write /sys/module/cpu_boost/parameters/input_boost_freq "0:1094400 4:998400 5:998400"
     write /sys/module/cpu_boost/parameters/boost_ms 0
-    write /sys/module/cpu_boost/parameters/input_boost_ms 1920
+    write /sys/module/cpu_boost/parameters/input_boost_ms 1500
     write /sys/module/msm_performance/parameters/touchboost 0
 
 # Performance
