--- a/rootdir/etc/init.spectrum.rc
+++ b/rootdir/etc/init.spectrum.rc
@@ -14,51 +14,83 @@ on property:sys.boot_completed=1
 
 # Balance (default profile)
 on property:persist.spectrum.profile=0
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 94
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/above_hispeed_delay "0 1440000:20000"
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_rate 50000
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 1094400
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_slack 200000
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads 88
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 0
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/boost 0
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/align_windows 1
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_migration_notif 1
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_sched_load 0
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/max_freq_hysteresis 0
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/boostpulse_duration 0
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/go_hispeed_load 92
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/above_hispeed_delay "0 1094400:20000"
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate 40000
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/hispeed_freq 998400
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_slack 160000
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads 85
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/min_sample_time 20000
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boost 0
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/align_windows 1
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_migration_notif 1
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_sched_load 0
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/max_freq_hysteresis 0
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boostpulse_duration 0
-    write /sys/module/cpu_boost/parameters/input_boost_enabled 1
-    write /sys/module/cpu_boost/parameters/input_boost_freq "0:1094400 4:998400 5:998400"
-    write /sys/module/cpu_boost/parameters/boost_ms 0
-    write /sys/module/cpu_boost/parameters/input_boost_ms 1500
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 94
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/above_hispeed_delay "0 1440000:20000"
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_rate 40000
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 1094400
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_slack 160000
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads 88
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 20000
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/boost 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/align_windows 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_migration_notif 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_sched_load 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/max_freq_hysteresis 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/boostpulse_duration 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1516800
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 345600
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor interactive
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/go_hispeed_load 92
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/above_hispeed_delay "0 1094400:20000"
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate 40000
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/hispeed_freq 998400
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_slack 160000
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads 85
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/min_sample_time 20000
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boost 0
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/align_windows 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_migration_notif 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_sched_load 0
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/max_freq_hysteresis 0
+   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boostpulse_duration 0
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
+   write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+   write /sys/module/cpu_boost/parameters/input_boost_freq "0:1094400 4:998400"
+   write /sys/module/cpu_boost/parameters/boost_ms 0
+   write /sys/module/cpu_boost/parameters/input_boost_ms 950
 
 # Performance
 on property:persist.spectrum.profile=1
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor ondemand
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1651200
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 499200
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 403200
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor ondemand
+   write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+   write /sys/module/cpu_boost/parameters/input_boost_freq "0:1094400 4:998400 5:998400"
+   write /sys/module/cpu_boost/parameters/boost_ms 0
+   write /sys/module/cpu_boost/parameters/input_boost_ms 1500
 
 # Battery
 on property:persist.spectrum.profile=2
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor powersave
-    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1344000
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 345600
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1094400
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor powersave
+   write /sys/module/cpu_boost/parameters/input_boost_enabled 0
 
 # Gaming
 on property:persist.spectrum.profile=3
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor performance
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1651200
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 960000
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 806400
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor performance
+   write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+   write /sys/module/cpu_boost/parameters/input_boost_freq "0:1440000 1:1440000 2: 1440000 3:1440000 4:1094400 5:1094400 6:1094400 7:1094400"
+   write /sys/module/cpu_boost/parameters/boost_ms 0
+   write /sys/module/cpu_boost/parameters/input_boost_ms 1950
