--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -178,4 +178,8 @@ on property:init.svc.recovery=running
 
 on property:dev.bootcomplete=1
     write /sys/block/dm-0/queue/read_ahead_kb 512
-    setprop sys.io.scheduler "cfq"
+    #setprop sys.io.scheduler "cfq"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor	interactive
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor interactive
+    write /sys/block/mmcblk0/queue/scheduler cfq
+    write /proc/sys/kernel/sched_boost 0
