athene: gps: Update config to P
Change-Id: I048d1a0c3587e71fe9916cbbb32387cfa7365cd4

--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -28,14 +28,17 @@ WIFI_WAIT_TIMEOUT_SELECT = 0
 # still return ZPP locations or injected locations even
 # without EULA consent, but the uncertainty can be high.
 NLP_MODE = 1
-NLP_TOLERANCE_TIME_FIRST = 5000
+NLP_TOLERANCE_TIME_FIRST = 2000
 NLP_TOLERANCE_TIME_AFTER = 20000
 NLP_THRESHOLD = 3
 NLP_ACCURACY_MULTIPLE = 2
 NLP_COMBO_MODE_USES_QNP_WITH_NO_EULA_CONSENT = 1
 
 # Threshold period for ZPP triggers
-ZPP_TRIGGER_THRESHOLD=2147483647
+ZPP_TRIGGER_THRESHOLD=86400000
+# Accuracy threshold for ZPP positions
+# less accurate positions are ignored
+ZPP_ACCURACY_THRESHOLD=20000
 
 ###################################
 # GEOFENCE SERVICES
@@ -67,12 +70,12 @@ GTP_CELL_PROC=MODEM
 #GTP_CELL valid modes:
 # DISABLED
 # BASIC
-GTP_CELL=DISABLED
+GTP_CELL=BASIC
 
 #GTP_WIFI valid modes:
 # DISABLED
 # BASIC
-GTP_WIFI=DISABLED
+GTP_WIFI=BASIC
 
 #GTP_WAA valid modes:
 # DISABLED
@@ -143,7 +146,6 @@ PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
 BASEBAND=auto
-LEAN_TARGETS=DISABLED
 
 PROCESS_NAME=/system/bin/gpsone_daemon
 PROCESS_ARGUMENT=
@@ -153,7 +155,6 @@ PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=msm7630_fusion
 BASEBAND=svlte2a sglte sglte2
-LEAN_TARGETS=DISABLED
 
 PROCESS_NAME=/system/bin/lowi-server
 PROCESS_ARGUMENT=
@@ -163,7 +164,6 @@ PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf303
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 
 PROCESS_NAME=/system/bin/xtwifi-inet-agent
 PROCESS_ARGUMENT=
@@ -173,7 +173,6 @@ PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xc0f
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 
 PROCESS_NAME=/system/bin/xtwifi-client
 PROCESS_ARGUMENT=
@@ -183,7 +182,6 @@ PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0f
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
 
 PROCESS_NAME=/vendor/bin/slim_daemon
 PROCESS_ARGUMENT=
@@ -193,4 +191,3 @@ PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
 PLATFORMS=all
 BASEBAND=all
-LEAN_TARGETS=DISABLED
