Set sys.usb.ffs.aio_compat
Change-Id: I36d76f74ceae3029f49c3cb564cd876bbb6b5b81

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -24,6 +24,7 @@ on fs
     chown system system /dev/ion
 
     setprop ro.board.platform msm8952
+    setprop sys.usb.ffs.aio_compat 1
 
 service sbinqseecomd /sbin/qseecomd
     user root
