athene: rootdir: Add IOP service
Signed-off-by: Rajat Gupta <rajatgupta1998@acm.org>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -470,6 +470,9 @@ on post-fs-data
     mkdir /data/nfc 0770 nfc nfc
     mkdir /data/nfc/param 0770 nfc nfc
 
+    #Create IOP deamon related dirs
+    mkdir /data/vendor/iop 0770 root system
+
     # Sensor
     mkdir /persist/sensors 0775 system system
     chmod 664 /persist/sensors/sensors_settings
@@ -575,6 +578,13 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
 
 # Services Start here
+service iop /system/vendor/bin/iop
+    class main
+    user root
+    group root
+    disabled
+    socket iop seqpacket 0666 root system
+
 service qfintverify /sbin/qfintverify
     user root
     class core
