athene: Move adsprpcd to vendor * Add a missing blob * Remove a duplicate entry in ueventd.qcom.rc
Signed-off-by: Rajat Gupta <rjtgupta84@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1043,7 +1043,7 @@ on property:persist.usb.chgdisabled=1
 on property:persist.usb.chgdisabled=0
     write /sys/class/power_supply/battery/charging_enabled 1
 
-service adsprpcd /system/bin/adsprpcd
+service adsprpcd /system/vendor/bin/adsprpcd
     class main
     user media
     group media
