--- a/audio/audio_ext_spkr.conf
+++ b/audio/audio_ext_spkr.conf
@@ -1,6 +1,7 @@
 global_config {
     name Affinity
-    sonification_pad 12
+    sonification_pad 20
+    sonification_prox_timeout_sec 5
 }
 
 ring {
