athene: ueventd: Add permission + group for bluetooth power controller
Signed-off-by: Rajat Gupta <rjtgupta84@gmail.com>

--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -189,6 +189,9 @@
 /dev/dvb/adapter0/dvr*    0660   media       media
 /dev/dvb/adapter0/video*  0660   media       media
 
+# Bluetooth Power Control
+/dev/btpower              0660   bluetooth  system
+
 # Broadcast devices
 /dev/tsc_mux0             0660   media       media
 /dev/tsc_ci0              0660   media       media
